# strapon

./: README.md  recource_manager.hpp  resource_manager.hpp  resource_manager_test.cpp
examples/base_game/: .gitignore  .ycm_extra_conf.py  CMakeLists.txt  Makefile  README.md
examples/base_game/src/: game.cpp
strapon/: sdl_helper.hpp
strapon/btmotionstate/: entity_motion_state.cpp  entity_motion_state.hpp
strapon/debug_draw/: debug_draw.cpp  debug_draw.hpp
strapon/resource_manager/: resource_manager.hpp
strapon/sdl_helpers/: sdl_helpers.hpp
strapon/state/: state.hpp
